--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -1,22 +1,14 @@
 {
-	"-1 for no limit, or a positive integer for a specific limit": "",
 	"'s', 'm', 'h', 'd', 'w' or '-1' for no expiration.": "",
 	"(e.g. `sh webui.sh --api --api-auth username_password`)": "",
 	"(e.g. `sh webui.sh --api`)": "",
 	"(latest)": "",
 	"(leave blank for to use commercial endpoint)": "",
+	"*Prompt node ID(s) are required for image generation": "",
+	"-1 for no limit, or a positive integer for a specific limit": "",
 	"[Last] dddd [at] h:mm A": "",
 	"[Today at] h:mm A": "",
 	"[Yesterday at] h:mm A": "",
-	"{{ models }}": "",
-	"{{COUNT}} Available Tools": "",
-	"{{COUNT}} characters": "",
-	"{{COUNT}} hidden lines": "",
-	"{{COUNT}} Replies": "",
-	"{{COUNT}} words": "",
-	"{{user}}'s Chats": "",
-	"{{webUIName}} Backend Required": "",
-	"*Prompt node ID(s) are required for image generation": "",
 	"A new version (v{{LATEST_VERSION}}) is now available.": "",
 	"A task model is used when performing tasks such as generating titles for chats and web search queries": "",
 	"a user": "",
@@ -56,6 +48,7 @@
 	"Add User Group": "",
 	"Additional Config": "",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "",
+	"Additional Context (JSON)": "",
 	"Adjusting these settings will apply changes universally to all users.": "",
 	"admin": "",
 	"Admin": "",
@@ -97,13 +90,16 @@
 	"Always Play Notification Sound": "",
 	"Amazing": "",
 	"an assistant": "",
+	"Analysis": "",
 	"Analytics": "",
+	"Analyze": "",
 	"Analyzed": "",
 	"Analyzing...": "",
 	"and": "",
-	"and {{COUNT}} more": "",
 	"and create a new shared link.": "",
+	"and {{COUNT}} more": "",
 	"Android": "",
+	"Anomalies": "",
 	"API": "",
 	"API Base URL": "",
 	"API Base URL for Datalab Marker service. Defaults to: https://www.datalab.to/api/v1/marker": "",
@@ -187,6 +183,12 @@
 	"Capabilities": "",
 	"Capture": "",
 	"Capture Audio": "",
+	"Case created": "",
+	"Case deleted": "",
+	"Case Feedback": "",
+	"Case Stats": "",
+	"Cases": "",
+	"Category (optional)": "",
 	"Certificate Path": "",
 	"Change Password": "",
 	"Channel Name": "",
@@ -257,7 +259,9 @@
 	"ComfyUI Workflow": "",
 	"ComfyUI Workflow Nodes": "",
 	"Command": "",
+	"Commands": "",
 	"Comment": "",
+	"Comment (optional)": "",
 	"Completions": "",
 	"Compress Images in Channels": "",
 	"Concurrent Requests": "",
@@ -279,10 +283,11 @@
 	"Contact Admin for WebUI Access": "",
 	"Content": "",
 	"Content Extraction Engine": "",
+	"Context (JSON, optional)": "",
 	"Continue Response": "",
-	"Continue with {{provider}}": "",
 	"Continue with Email": "",
 	"Continue with LDAP": "",
+	"Continue with {{provider}}": "",
 	"Control how message text is split for TTS requests. 'Punctuation' splits into sentences, 'paragraphs' splits into paragraphs, and 'none' keeps the message as a single string.": "",
 	"Control the repetition of token sequences in the generated text. A higher value (e.g., 1.5) will penalize repetitions more strongly, while a lower value (e.g., 1.1) will be more lenient. At 1, it is disabled.": "",
 	"Controls": "",
@@ -299,12 +304,14 @@
 	"Copy Link": "",
 	"Copy to clipboard": "",
 	"Copying to clipboard was successful!": "",
+	"Corrected Solution": "",
 	"CORS must be properly configured by the provider to allow requests from Open WebUI.": "",
 	"Create": "",
 	"Create a knowledge base": "",
 	"Create a model": "",
 	"Create Account": "",
 	"Create Admin Account": "",
+	"Create Case": "",
 	"Create Channel": "",
 	"Create Folder": "",
 	"Create Group": "",
@@ -316,6 +323,7 @@
 	"Created at": "",
 	"Created At": "",
 	"Created by": "",
+	"Creating...": "",
 	"CSV Import": "",
 	"Ctrl+Enter to Send": "",
 	"Current Model": "",
@@ -360,14 +368,16 @@
 	"Delete message?": "",
 	"Delete note?": "",
 	"Delete prompt?": "",
+	"Delete this case?": "",
 	"delete this link": "",
 	"Delete tool?": "",
 	"Delete User": "",
+	"Deleted User": "",
 	"Deleted {{deleteModelTag}}": "",
 	"Deleted {{name}}": "",
-	"Deleted User": "",
 	"Deployment names are required for Azure OpenAI": "",
 	"Describe Pictures in Documents": "",
+	"Describe the issue / query": "",
 	"Describe your knowledge base and objectives": "",
 	"Description": "",
 	"Detect Artifacts Automatically": "",
@@ -420,8 +430,8 @@
 	"Drag and drop a file to upload or select a file to view": "",
 	"Draw": "",
 	"Drop any files here to upload": "",
-	"e.g. '30s','10m'. Valid time units are 's', 'm', 'h'.": "",
 	"e.g. \"json\" or a JSON schema": "",
+	"e.g. '30s','10m'. Valid time units are 's', 'm', 'h'.": "",
 	"e.g. 60": "",
 	"e.g. A filter to remove profanity from text": "",
 	"e.g. en": "",
@@ -435,6 +445,7 @@
 	"e.g., audio/wav,audio/mpeg,video/* (leave blank for defaults)": "",
 	"e.g., en-US,ja-JP (leave blank for auto-detect)": "",
 	"e.g., westus (leave blank for eastus)": "",
+	"Edges": "",
 	"Edit": "",
 	"Edit Arena Model": "",
 	"Edit Channel": "",
@@ -470,7 +481,6 @@
 	"Enforce Temporary Chat": "",
 	"Enhance": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "",
-	"Enter {{role}} message here": "",
 	"Enter a detail about yourself for your LLMs to recall": "",
 	"Enter a title for the pending user info overlay. Leave empty for default.": "",
 	"Enter a watermark for the response. Leave empty for none.": "",
@@ -577,6 +587,7 @@
 	"Enter Your Role": "",
 	"Enter Your Username": "",
 	"Enter your webhook URL": "",
+	"Enter {{role}} message here": "",
 	"Error": "",
 	"ERROR": "",
 	"Error accessing Google Drive: {{error}}": "",
@@ -596,6 +607,7 @@
 	"Exclude": "",
 	"Execute code for analysis": "",
 	"Executing **{{NAME}}**...": "",
+	"Existing feedback loaded": "",
 	"Expand": "",
 	"Experimental": "",
 	"Explain": "",
@@ -627,8 +639,8 @@
 	"Failed to copy link": "",
 	"Failed to create API Key.": "",
 	"Failed to delete note": "",
-	"Failed to extract content from the file: {{error}}": "",
 	"Failed to extract content from the file.": "",
+	"Failed to extract content from the file: {{error}}": "",
 	"Failed to fetch models": "",
 	"Failed to generate title": "",
 	"Failed to load chat preview": "",
@@ -658,6 +670,7 @@
 	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
+	"Filter Tags (comma-separated)": "",
 	"Filters": "",
 	"Fingerprint spoofing detected: Unable to use initials as avatar. Defaulting to default profile image.": "",
 	"Firecrawl API Base URL": "",
@@ -681,6 +694,7 @@
 	"Format Lines": "",
 	"Format the lines in the output. Defaults to False. If set to True, the lines will be formatted to detect inline math and styles.": "",
 	"Format your variables using brackets like this:": "",
+	"Formatted": "",
 	"Forwards system user session credentials to authenticate": "",
 	"Full Context Mode": "",
 	"Function": "",
@@ -725,6 +739,8 @@
 	"H2": "",
 	"H3": "",
 	"Haptic Feedback": "",
+	"Health": "",
+	"Health and statistics": "",
 	"Hello, {{name}}": "",
 	"Help": "",
 	"Help us create the best community leaderboard by sharing your feedback history!": "",
@@ -785,11 +801,14 @@
 	"Install from Github URL": "",
 	"Instant Auto-Send After Voice Transcription": "",
 	"Integration": "",
+	"Interaction created": "",
 	"Interface": "",
 	"Invalid file content": "",
 	"Invalid file format.": "",
 	"Invalid JSON file": "",
 	"Invalid JSON format in Additional Config": "",
+	"Invalid JSON in Additional Context": "",
+	"Invalid JSON in Knowledge Contribution": "",
 	"Invalid Tag": "",
 	"is typing...": "",
 	"Italic": "",
@@ -812,6 +831,7 @@
 	"Knowledge": "",
 	"Knowledge Access": "",
 	"Knowledge Base": "",
+	"Knowledge Contribution (JSON)": "",
 	"Knowledge created successfully.": "",
 	"Knowledge deleted successfully.": "",
 	"Knowledge Public Sharing": "",
@@ -826,6 +846,7 @@
 	"Last Active": "",
 	"Last Modified": "",
 	"Last reply": "",
+	"Layout": "",
 	"LDAP": "",
 	"LDAP server updated": "",
 	"Leaderboard": "",
@@ -843,14 +864,21 @@
 	"License": "",
 	"Lift List": "",
 	"Light": "",
+	"List existing cases and create new": "",
+	"List Tasks": "",
 	"Listening...": "",
 	"Llama.cpp": "",
 	"LLMs can make mistakes. Verify important information.": "",
+	"Load": "",
 	"Loader": "",
 	"Loading Kokoro.js...": "",
+	"Loading...": "",
 	"Local": "",
 	"Local Task Model": "",
 	"Location access not allowed": "",
+	"Log Content": "",
+	"Log parsing and related knowledge": "",
+	"Log Type": "",
 	"Lost": "",
 	"LTR": "",
 	"Made by Open WebUI Community": "",
@@ -891,11 +919,6 @@
 	"Model": "",
 	"Model '{{modelName}}' has been successfully downloaded.": "",
 	"Model '{{modelTag}}' is already in queue for downloading.": "",
-	"Model {{modelId}} not found": "",
-	"Model {{modelName}} is not vision capable": "",
-	"Model {{name}} is now {{status}}": "",
-	"Model {{name}} is now hidden": "",
-	"Model {{name}} is now visible": "",
 	"Model accepts file inputs": "",
 	"Model accepts image inputs": "",
 	"Model can execute code and perform calculations": "",
@@ -914,6 +937,11 @@
 	"Model Permissions": "",
 	"Model unloaded successfully": "",
 	"Model updated successfully": "",
+	"Model {{modelId}} not found": "",
+	"Model {{modelName}} is not vision capable": "",
+	"Model {{name}} is now hidden": "",
+	"Model {{name}} is now visible": "",
+	"Model {{name}} is now {{status}}": "",
 	"Model(s) do not support file upload": "",
 	"Modelfile Content": "",
 	"Models": "",
@@ -925,6 +953,7 @@
 	"More": "",
 	"More Concise": "",
 	"More Options": "",
+	"My Cases": "",
 	"Name": "",
 	"Name your knowledge base": "",
 	"Native": "",
@@ -932,11 +961,14 @@
 	"New Chat": "",
 	"New Folder": "",
 	"New Function": "",
+	"New Interaction": "",
 	"New Note": "",
 	"New Password": "",
 	"New Tool": "",
 	"new-channel": "",
 	"Next message": "Next message",
+	"No anomalies": "",
+	"No cases yet.": "",
 	"No chats found": "",
 	"No chats found for this user.": "",
 	"No chats found.": "",
@@ -944,7 +976,9 @@
 	"No content found": "",
 	"No content found in file.": "",
 	"No content to speak": "",
+	"No data": "",
 	"No distance available": "",
+	"No feedback yet": "",
 	"No feedbacks found": "",
 	"No file selected": "",
 	"No groups with access, add a group to grant access": "",
@@ -956,11 +990,15 @@
 	"No models found": "",
 	"No models selected": "",
 	"No Notes": "",
+	"No recommendations": "",
+	"No result": "",
+	"No results": "",
 	"No results found": "",
 	"No search query generated": "",
 	"No source available": "",
 	"No users were found.": "",
 	"No valves to update": "",
+	"Nodes": "",
 	"None": "",
 	"Not factually correct": "",
 	"Not helpful": "",
@@ -993,6 +1031,7 @@
 	"Oops! There are files still uploading. Please wait for the upload to complete.": "",
 	"Oops! There was an error in the previous response.": "",
 	"Oops! You're using an unsupported method (frontend only). Please serve the WebUI from the backend.": "",
+	"Open": "",
 	"Open file": "",
 	"Open in full screen": "",
 	"Open modal to configure connection": "",
@@ -1016,6 +1055,7 @@
 	"Ordered List": "",
 	"Organize your users": "",
 	"Other": "",
+	"Outcome": "",
 	"OUTPUT": "",
 	"Output format": "",
 	"Output Format": "",
@@ -1023,6 +1063,8 @@
 	"page": "",
 	"Paginate": "",
 	"Parameters": "",
+	"Parent Node": "",
+	"Partially Solved": "",
 	"Password": "",
 	"Passwords do not match.": "",
 	"Paste Large Text as File": "",
@@ -1063,9 +1105,11 @@
 	"Please enter a valid path": "",
 	"Please enter a valid URL": "",
 	"Please fill in all fields.": "",
+	"Please fill required fields": "",
 	"Please select a model first.": "",
 	"Please select a model.": "",
 	"Please select a reason": "",
+	"Please select outcome": "",
 	"Please wait until all files are uploaded.": "",
 	"Port": "",
 	"Positive attitude": "",
@@ -1091,38 +1135,47 @@
 	"Public": "",
 	"Pull \"{{searchValue}}\" from Ollama.com": "",
 	"Pull a model from Ollama.com": "",
+	"Query cannot be empty.": "",
 	"Query Generation Prompt": "",
 	"Quick Actions": "",
 	"RAG Template": "",
+	"Rate Node": "",
+	"Rated": "",
 	"Rating": "",
+	"Raw": "",
+	"Raw JSON": "",
 	"Re-rank models by topic similarity": "",
 	"Read": "",
 	"Read Aloud": "",
 	"Reason": "",
 	"Reasoning Effort": "",
+	"Recommendations": "",
 	"Record": "",
 	"Record voice": "",
 	"Redirecting you to Open WebUI Community": "",
 	"Reduces the probability of generating nonsense. A higher value (e.g. 100) will give more diverse answers, while a lower value (e.g. 10) will be more conservative.": "",
 	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"References from": "",
+	"Refresh": "",
 	"Refused when it shouldn't have": "",
 	"Regenerate": "",
 	"Regenerate Menu": "",
+	"Regenerate submitted": "",
 	"Reindex": "",
 	"Reindex Knowledge Base Vectors": "",
+	"Related Knowledge": "",
 	"Release Notes": "",
 	"Releases": "",
 	"Relevance": "",
 	"Relevance Threshold": "",
 	"Remember Dismissal": "",
 	"Remove": "",
-	"Remove {{MODELID}} from list.": "",
 	"Remove file": "",
 	"Remove File": "",
 	"Remove image": "",
 	"Remove Model": "",
 	"Remove this tag from list": "",
+	"Remove {{MODELID}} from list.": "",
 	"Rename": "",
 	"Reorder Models": "",
 	"Reply in Thread": "",
@@ -1134,12 +1187,14 @@
 	"Reset Vector Storage/Knowledge": "",
 	"Reset view": "",
 	"Response": "",
+	"Response Data (JSON)": "",
 	"Response notifications cannot be activated as the website permissions have been denied. Please visit your browser settings to grant the necessary access.": "",
 	"Response splitting": "",
 	"Response Watermark": "",
 	"Result": "",
 	"Retrieval": "",
 	"Retrieval Query Generation": "",
+	"Retrieval Weight": "",
 	"Rich Text Input for Chat": "",
 	"RK": "",
 	"Role": "",
@@ -1155,6 +1210,7 @@
 	"Save Tag": "",
 	"Saved": "",
 	"Saving chat logs directly to your browser's storage is no longer supported. Please take a moment to download and delete your chat logs by clicking the button below. Don't worry, you can easily re-import your chat logs to the backend through": "",
+	"Score": "",
 	"Scroll On Branch Change": "",
 	"Search": "",
 	"Search a model": "",
@@ -1193,6 +1249,7 @@
 	"Select a function": "",
 	"Select a group": "",
 	"Select a model": "",
+	"Select a node": "",
 	"Select a pipeline": "",
 	"Select a pipeline url": "",
 	"Select a tool": "",
@@ -1202,6 +1259,7 @@
 	"Select Knowledge": "",
 	"Select only one model to call": "",
 	"Selected model(s) do not support image inputs": "",
+	"Selected Node": "",
 	"semantic": "",
 	"Semantic distance to query": "",
 	"Send": "",
@@ -1237,6 +1295,7 @@
 	"Sets the stop sequences to use. When this pattern is encountered, the LLM will stop generating text and return. Multiple stop patterns may be set by specifying multiple separate stop parameters in a modelfile.": "",
 	"Settings": "",
 	"Settings saved successfully!": "",
+	"Severity": "",
 	"Share": "",
 	"Share Chat": "",
 	"Share to Open WebUI Community": "",
@@ -1265,6 +1324,7 @@
 	"sk-1234": "",
 	"Skip Cache": "",
 	"Skip the cache and re-run the inference. Defaults to False.": "",
+	"Solved": "",
 	"Sougou Search API sID": "",
 	"Sougou Search API SK": "",
 	"Source": "",
@@ -1272,22 +1332,29 @@
 	"Speech recognition error: {{error}}": "",
 	"Speech-to-Text": "",
 	"Speech-to-Text Engine": "",
+	"Statistics": "",
+	"Status": "",
 	"Stop": "",
 	"Stop Generating": "",
 	"Stop Sequence": "",
+	"Stop signal sent": "",
+	"Stop Tasks": "",
 	"Stream Chat Response": "",
 	"Stream Delta Chunk Size": "",
 	"Strikethrough": "",
 	"Strip Existing OCR": "",
 	"Strip existing OCR text from the PDF and re-run OCR. Ignored if Force OCR is enabled. Defaults to False.": "",
+	"Structured": "",
 	"STT Model": "",
 	"STT Settings": "",
 	"Stylized PDF Export": "",
+	"Submit": "",
 	"Subtitle (e.g. about the Roman Empire)": "",
 	"Success": "",
 	"Successfully updated.": "",
 	"Suggest a change": "",
 	"Suggested": "",
+	"Summary": "",
 	"Support": "",
 	"Support this plugin:": "",
 	"Supported MIME Types": "",
@@ -1353,15 +1420,17 @@
 	"This will delete all models including custom models and cannot be undone.": "",
 	"This will reset the knowledge base and sync all files. Do you wish to continue?": "",
 	"Thorough explanation": "",
+	"Thought for less than a second": "",
 	"Thought for {{DURATION}}": "",
 	"Thought for {{DURATION}} seconds": "",
-	"Thought for less than a second": "",
 	"Tika": "",
 	"Tika Server URL required.": "",
 	"Tiktoken": "",
+	"Time": "",
 	"Tip: Update multiple variable slots consecutively by pressing the tab key in the chat input after each replacement.": "",
 	"Title": "",
 	"Title (e.g. Tell me a fun fact)": "",
+	"Title (optional)": "",
 	"Title Auto-Generation": "",
 	"Title cannot be an empty string.": "",
 	"Title Generation": "",
@@ -1401,6 +1470,7 @@
 	"Tools Public Sharing": "",
 	"Top K": "",
 	"Top K Reranker": "",
+	"total": "",
 	"Transformers": "",
 	"Trouble accessing Ollama?": "",
 	"Trust Proxy Environment": "",
@@ -1420,6 +1490,7 @@
 	"Unlock mysteries": "",
 	"Unpin": "",
 	"Unravel secrets": "",
+	"Unsolved": "",
 	"Unsupported file type.": "",
 	"Untagged": "",
 	"Untitled": "",
@@ -1465,6 +1536,9 @@
 	"Valves updated": "",
 	"Valves updated successfully": "",
 	"variable": "",
+	"Vendor": "",
+	"Vendor (optional)": "",
+	"Vendor Commands": "",
 	"Verify Connection": "",
 	"Verify SSL Certificate": "",
 	"Version": "",
@@ -1529,5 +1603,13 @@
 	"Your entire contribution will go directly to the plugin developer; Open WebUI does not take any percentage. However, the chosen funding platform might have its own fees.": "",
 	"Youtube": "",
 	"Youtube Language": "",
-	"Youtube Proxy URL": ""
+	"Youtube Proxy URL": "",
+	"{{ models }}": "",
+	"{{COUNT}} Available Tools": "",
+	"{{COUNT}} characters": "",
+	"{{COUNT}} hidden lines": "",
+	"{{COUNT}} Replies": "",
+	"{{COUNT}} words": "",
+	"{{user}}'s Chats": "",
+	"{{webUIName}} Backend Required": ""
 }
